Change trajectory creation convention and add default timeout
Makes it so trajectories are stored in AutoRoutineBase as <Name, Timeout>
This simplifies code so a timeout does not have to be defined in the
command group. Additionally adds default timeout of 5 seconds to
trajectories that do not have one explicitly defined.