@@ -2,6 +2,7 @@ package frc.lib.bioniclib;
 
 import java.util.List;
 
+import edu.wpi.first.math.Pair;
 import edu.wpi.first.wpilibj2.command.InstantCommand;
 import edu.wpi.first.wpilibj2.command.SequentialCommandGroup;
 import frc.robot.subsystems.drivetrain.commands.PathResetOdometry;
@@ -12,7 +13,7 @@ import frc.robot.subsystems.vision.Vision;
 
 public abstract class AutoRoutineBase extends SequentialCommandGroup {
 
-    private List<String> trajectories;
+    private List<Pair<String, Double>> trajectories; //<Name, Timeout>
 
     protected IntakeFeeder m_intake;
     protected Vision m_vision;
@@ -28,15 +29,14 @@ public abstract class AutoRoutineBase extends SequentialCommandGroup {
 
         trajectories = addTrajectories();
         addCommands(
-            trajectories != null ? new PathResetOdometry(trajectories.get(0)) : null,
+            trajectories != null ? new PathResetOdometry(trajectories.get(0).getFirst()) : null,
             new InstantCommand(m_intake::resetBallCount, m_intake)
         );
-
     }
 
-    protected abstract List<String> addTrajectories();
+    protected abstract List<Pair<String, Double>> addTrajectories();
 
-    protected String getTrajectory(int index) {
+    protected Pair<String, Double> getTrajectory(int index) {
         return trajectories.get(index);
     }
     
